# AnchorEdit

./: Cargo.toml  README.md  SPEC.md
docs/: SLIDING_BISECTION.md  SPEC.md
src/: apply.rs  error.rs  lib.rs  main.rs
src/commands/: mod.rs  read.rs  search.rs  write.rs
tests/: integration.rs
v1/: README.md
v1/docs/: SPEC.md
v1/src/: main.rs
v1/tests/: integration.rs
