[package]
name = "anchoredit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "anchoredit"
path = "src/main.rs"

[[bin]]
name = "ae"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
