[package]
name = "anchoredit"
version = "2.0.0"
edition = "2021"

[lib]
name = "anchoredit"
path = "src/lib.rs"

[[bin]]
name = "anchoredit"
path = "src/main.rs"

[dependencies]
anchorscope = { path = "../AnchorScope" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
